[gd_scene load_steps=105 format=3 uid="uid://cta7vnl86huxp"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_m1lax"]
[ext_resource type="Texture2D" uid="uid://bpmkfdb0413yd" path="res://Sprites/FeatherFrog/sidefeatherfrogoutline.png" id="2_a1ld4"]
[ext_resource type="Texture2D" uid="uid://ct1hn2mhdmcq3" path="res://Sprites/FeatherFrog/featherfrogfall.png" id="3_pq4y7"]
[ext_resource type="Texture2D" uid="uid://ccsulijcnsm0u" path="res://Sprites/FeatherFrog/featherfrogjump.png" id="4_u5v6k"]
[ext_resource type="Texture2D" uid="uid://cykur00es85bw" path="res://Sprites/FeatherFrog/featherfrogrun.png" id="5_h4bds"]
[ext_resource type="Texture2D" uid="uid://cmbr0ep1tko1u" path="res://Sprites/FeatherFrog/wallslidefeatherfrog.png" id="6_rk5os"]
[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="7_0xfl2"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerGround.gd" id="8_ym70h"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerFall.gd" id="9_dv7pt"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerJump.gd" id="10_lx6wb"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerDash.gd" id="11_yqrcq"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerAttack.gd" id="12_x4vra"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerWallcling.gd" id="13_r3n26"]
[ext_resource type="Texture2D" uid="uid://crhyqbuqitupp" path="res://Sprites/RobotGuy/robotguyattack1.png" id="14_ckadx"]
[ext_resource type="Texture2D" uid="uid://suhvp76cqku3" path="res://Sprites/RobotGuy/robotguyfall.png" id="15_reb5b"]
[ext_resource type="Texture2D" uid="uid://dnmbb16epgsnn" path="res://Sprites/RobotGuy/siderobotguy.png" id="16_xetss"]
[ext_resource type="Texture2D" uid="uid://ci2rtyb780j58" path="res://Sprites/RobotGuy/robotguyjump.png" id="17_vyy50"]
[ext_resource type="Texture2D" uid="uid://bn3v3ilnguhy4" path="res://Sprites/RobotGuy/robotguyrun.png" id="18_tirwi"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerShield.gd" id="19_okehv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h3i86"]
atlas = ExtResource("14_ckadx")
region = Rect2(0, 0, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldrkr"]
atlas = ExtResource("14_ckadx")
region = Rect2(38, 0, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vj8w"]
atlas = ExtResource("14_ckadx")
region = Rect2(76, 0, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2ssf"]
atlas = ExtResource("14_ckadx")
region = Rect2(114, 0, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckxab"]
atlas = ExtResource("14_ckadx")
region = Rect2(152, 0, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w1lm"]
atlas = ExtResource("14_ckadx")
region = Rect2(190, 0, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hscl"]
atlas = ExtResource("15_reb5b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q74wb"]
atlas = ExtResource("15_reb5b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_buy2r"]
atlas = ExtResource("15_reb5b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgudj"]
atlas = ExtResource("15_reb5b")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j8rr"]
atlas = ExtResource("16_xetss")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_apiov"]
atlas = ExtResource("16_xetss")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdtl4"]
atlas = ExtResource("16_xetss")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggaw2"]
atlas = ExtResource("16_xetss")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_idvcv"]
atlas = ExtResource("16_xetss")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7j4i"]
atlas = ExtResource("16_xetss")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0e73"]
atlas = ExtResource("16_xetss")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eay2h"]
atlas = ExtResource("16_xetss")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nijm7"]
atlas = ExtResource("16_xetss")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w06ux"]
atlas = ExtResource("16_xetss")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20r5l"]
atlas = ExtResource("16_xetss")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_11i54"]
atlas = ExtResource("16_xetss")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dkpr"]
atlas = ExtResource("16_xetss")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_twkby"]
atlas = ExtResource("16_xetss")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftqn8"]
atlas = ExtResource("17_vyy50")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83b2r"]
atlas = ExtResource("17_vyy50")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j10wf"]
atlas = ExtResource("17_vyy50")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85o38"]
atlas = ExtResource("17_vyy50")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s75lh"]
atlas = ExtResource("18_tirwi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhey0"]
atlas = ExtResource("18_tirwi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yvo5"]
atlas = ExtResource("18_tirwi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ach2"]
atlas = ExtResource("18_tirwi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_syvlu"]
atlas = ExtResource("18_tirwi")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ddc6"]
atlas = ExtResource("18_tirwi")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ydj5b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3i86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldrkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vj8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2ssf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckxab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w1lm")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hscl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q74wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buy2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgudj")
}],
"loop": true,
"name": &"fall",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j8rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apiov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdtl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggaw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idvcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7j4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0e73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eay2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nijm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w06ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20r5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11i54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dkpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twkby")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftqn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83b2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j10wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85o38")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s75lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhey0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yvo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ach2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syvlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ddc6")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_m0kjc"]
atlas = ExtResource("2_a1ld4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu88g"]
atlas = ExtResource("2_a1ld4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2dwv"]
atlas = ExtResource("2_a1ld4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypaty"]
atlas = ExtResource("2_a1ld4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lxg0"]
atlas = ExtResource("2_a1ld4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsqrt"]
atlas = ExtResource("2_a1ld4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiiak"]
atlas = ExtResource("2_a1ld4")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xbv0"]
atlas = ExtResource("2_a1ld4")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1koy"]
atlas = ExtResource("2_a1ld4")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4j64"]
atlas = ExtResource("2_a1ld4")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo2et"]
atlas = ExtResource("3_pq4y7")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ve8i"]
atlas = ExtResource("3_pq4y7")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nxp2"]
atlas = ExtResource("3_pq4y7")
region = Rect2(64, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_yus22"]
atlas = ExtResource("3_pq4y7")
region = Rect2(96, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj82o"]
atlas = ExtResource("3_pq4y7")
region = Rect2(128, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_gma0s"]
atlas = ExtResource("3_pq4y7")
region = Rect2(160, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_283if"]
atlas = ExtResource("3_pq4y7")
region = Rect2(192, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyjrv"]
atlas = ExtResource("3_pq4y7")
region = Rect2(224, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f7ls"]
atlas = ExtResource("2_a1ld4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfwgq"]
atlas = ExtResource("2_a1ld4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bckot"]
atlas = ExtResource("2_a1ld4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1qu6"]
atlas = ExtResource("2_a1ld4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxdy"]
atlas = ExtResource("2_a1ld4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m85p"]
atlas = ExtResource("2_a1ld4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oca81"]
atlas = ExtResource("2_a1ld4")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v8oq"]
atlas = ExtResource("2_a1ld4")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4meo4"]
atlas = ExtResource("2_a1ld4")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqpiw"]
atlas = ExtResource("2_a1ld4")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmwf3"]
atlas = ExtResource("4_u5v6k")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi7s5"]
atlas = ExtResource("4_u5v6k")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f2vk"]
atlas = ExtResource("4_u5v6k")
region = Rect2(64, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvyd4"]
atlas = ExtResource("4_u5v6k")
region = Rect2(96, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqpvd"]
atlas = ExtResource("4_u5v6k")
region = Rect2(128, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcffq"]
atlas = ExtResource("4_u5v6k")
region = Rect2(160, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3s2c"]
atlas = ExtResource("4_u5v6k")
region = Rect2(192, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_4msn1"]
atlas = ExtResource("4_u5v6k")
region = Rect2(224, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_io5dc"]
atlas = ExtResource("5_h4bds")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfjyk"]
atlas = ExtResource("5_h4bds")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5up2"]
atlas = ExtResource("5_h4bds")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hffk"]
atlas = ExtResource("5_h4bds")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lpkj"]
atlas = ExtResource("5_h4bds")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0goq"]
atlas = ExtResource("5_h4bds")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4bjv"]
atlas = ExtResource("5_h4bds")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a52d0"]
atlas = ExtResource("5_h4bds")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wcgu"]
atlas = ExtResource("5_h4bds")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7bym"]
atlas = ExtResource("5_h4bds")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4onsc"]
atlas = ExtResource("6_rk5os")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ixvtf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0kjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu88g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2dwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypaty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lxg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsqrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiiak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xbv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1koy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4j64")
}],
"loop": true,
"name": &"attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo2et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ve8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nxp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yus22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj82o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gma0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_283if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyjrv")
}],
"loop": true,
"name": &"fall",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f7ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfwgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bckot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1qu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efxdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m85p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oca81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v8oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4meo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqpiw")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmwf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi7s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f2vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvyd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqpvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcffq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3s2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4msn1")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_io5dc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfjyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5up2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hffk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lpkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0goq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4bjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a52d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wcgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7bym")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4onsc")
}],
"loop": true,
"name": &"wallcling",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m8j6x"]
radius = 14.0237
height = 84.0863

[sub_resource type="Curve" id="Curve_w8qbk"]
min_value = -4.0
max_value = 4.0
_data = [Vector2(0, 0.912689), 0.0, 0.0, 0, 0, Vector2(0.502427, 2.51688), 0.0, 0.0, 0, 0, Vector2(1, 0.125728), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Player" type="CharacterBody2D"]
position = Vector2(-1, -1)
scale = Vector2(0.613918, 0.547057)
collision_layer = 2
collision_mask = 17
script = ExtResource("1_m1lax")
drag = 800
acceleration = 1500
moveSpeed = 250
terminal_velocity = 400
maxHealth = 400
immunityTime = 0.81
jumpBufferTime = 0.032

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(6.51553, 7.31186)
scale = Vector2(2.44927, 2.44927)
sprite_frames = SubResource("SpriteFrames_ydj5b")
animation = &"attack"
speed_scale = 1.5

[node name="AnimatedSprite2D_frog" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1.62888, -5.72205e-06)
scale = Vector2(2.50135, 2.80706)
sprite_frames = SubResource("SpriteFrames_ixvtf")
animation = &"attack"
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.25776, 3.65592)
scale = Vector2(1.69027, 1.00438)
shape = SubResource("CapsuleShape2D_m8j6x")
metadata/_edit_group_ = true

[node name="stunTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="immunityTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="RayRight" type="RayCast2D" parent="."]
target_position = Vector2(35.8354, 0)

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-30.9488, 0)

[node name="jumpBufferTimer" type="Timer" parent="."]
one_shot = true

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("7_0xfl2")
starting_state = NodePath("fall")

[node name="ground" type="Node" parent="state_machine"]
script = ExtResource("8_ym70h")

[node name="coyoteTimer" type="Timer" parent="state_machine/ground"]
one_shot = true

[node name="fall" type="Node" parent="state_machine"]
script = ExtResource("9_dv7pt")

[node name="jump" type="Node" parent="state_machine"]
script = ExtResource("10_lx6wb")
jump_velocity = 600

[node name="dash" type="Node" parent="state_machine"]
script = ExtResource("11_yqrcq")

[node name="attack" type="Node" parent="state_machine"]
script = ExtResource("12_x4vra")
frames_before_attack = 2
airDragMultiplier = 0.3

[node name="wallcling" type="Node" parent="state_machine"]
script = ExtResource("13_r3n26")

[node name="shield" type="Node" parent="state_machine"]
script = ExtResource("19_okehv")

[node name="shieldParticles" type="CPUParticles2D" parent="state_machine/shield"]
position = Vector2(-1, -1)
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_sphere_radius = 28.1
gravity = Vector2(2.08165e-12, 2.08165e-12)
orbit_velocity_min = 0.5
orbit_velocity_max = 0.5
orbit_velocity_curve = SubResource("Curve_w8qbk")

[connection signal="took_damage" from="." to="state_machine/shield" method="_on_player_took_damage"]
